--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,7 +2,7 @@ $borderColor: #a5a5a5;
 $buttonPadding: 12px;
 .btn {
   padding: 0.75em 1.25em;
-  border: 1px solid ;
+  border: 1px solid $borderColor;
   font-family: inherit;
   font-size: inherit;
   color: inherit;
