--- a/storybook-static/4.css
+++ b/storybook-static/4.css
@@ -1,9 +1,10 @@
-.btn {
+.Button__btn {
   padding: 0.75em 1.25em;
   border: 1px solid grey;
   font-family: inherit;
   font-size: inherit;
   color: inherit;
+  background: none;
   cursor: pointer;
   display: inline-block;
   letter-spacing: 1px;
@@ -15,7 +16,6 @@
   text-decoration: none;
   font-style: normal;
   border-radius: 0;
-  background: orange;
 
   /* &:after {
     content: '';
@@ -25,6 +25,8 @@
   } */
 }
 
-.action {
+.Button__action {
   background: blue;
 }
+
+/*# sourceMappingURL=4.css.map*/
