--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,3 +1,4 @@
+$blue: blue;
 .btn {
   padding: 0.75em 1.25em;
   border: 1px solid grey;
@@ -16,8 +17,15 @@
   font-style: normal;
   border-radius: 0;
   background: orange;
+
 }
 
+$blue: blue;
+
 .action {
-  background: blue;
+  background: $blue;
+}
+
+.link {
+  background: lightgray;
 }
