--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,7 +2,7 @@ $tbBlue: #0099cb;
 .btn {
   font-family: 'Raleway', sans-serif;
   padding: 0.75em 1.25em;
-  border: 1px solid grey;
+  border: none;
   font-size: inherit;
   color: inherit;
   cursor: pointer;
@@ -15,14 +15,14 @@ $tbBlue: #0099cb;
   transition: all 0.3s;
   text-decoration: none;
   font-style: normal;
-  border-radius: 0;
-
+  border-radius: 2px;
 }
 
 .action {
-  background-color: #0099cb;
+  background-color: $tbBlue;
+  color: white;
 }
 
 .link {
-  background: lightgray;
+  background: lightgrey;
 }
