--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,4 +1,5 @@
-$tbBlue: #0099cb;
+/* $tbBlue: #0099cb; */
+@import "../../styles/colors.css";
 .btn {
   font-family: 'Raleway', sans-serif;
   padding: 0.75em 1.25em;
@@ -19,10 +20,21 @@ $tbBlue: #0099cb;
 }
 
 .action {
-  background-color: $tbBlue;
+  background-color: var(--color-tbblue);
   color: white;
+  &:hover {
+    background-color: var(--color-lighter-tbblue);
+  }
 }
 
 .link {
-  background: lightgrey;
+  background: var(--color-tim);
+}
+
+.soft {
+  background: var(--color-offwhite);
+  border: 1px solid black;
+  &:hover {
+    background: var(--color-darkerwhite);
+  }
 }
