--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,18 +1,17 @@
 @import "../../styles/colors.css";
 @import "../../styles/icons.css";
+@import "../../styles/layout.css";
 
 .btn {
-  font-family: 'Raleway', sans-serif;
+  @mixin centerContent;
+  font-family: 'Nunito', sans-serif;
   padding: 0.75em 1.25em;
   border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   font-size: inherit;
   color: inherit;
   cursor: pointer;
   letter-spacing: 1px;
-  font-weight: 500;
+  font-weight: 200;
   outline: none;
   text-align: center;
   position: relative;
@@ -20,37 +19,41 @@
   text-decoration: none;
   font-style: normal;
   border-radius: 2px;
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 .primary {
-  background-color: $tbBlue;
+  background-color: $clearChill;
   color: white;
-  &.cta {
+  &.callToAction {
     @mixin cta-icon white;
   }
   &:hover {
-    background-color: $lighterTbBlue
+    background-color: color-mod($clearChill tint(10%));
   }
 }
 
-
 .secondary {
-  background: $lightGrey;
+  background-color: $shipsOfficer;
+  color: white;
   &:hover {
-    background-color: color-mod($lightGrey tint(10%));
+    background-color: color-mod($shipsOfficer tint(10%));
   }
-  &.cta {
-    @mixin cta-icon gray;
+  &.callToAction {
+    @mixin cta-icon white;
   }
 }
 
 .soft {
-  background: $offWhite;
+  background: color-mod($fallingStar tint(10%));
   border: 1px solid black;
   &:hover {
-    background: $darkerWhite;
+    background: color-mod($fallingStar tint(20%));
   }
-  &.cta {
+  &.callToAction {
     @mixin cta-icon gray;
   }
 }
