--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -28,7 +28,7 @@
 .primary {
   background-color: $clearChill;
   color: white;
-  &.callToAction {
+  &.cta {
     @mixin cta-icon white;
   }
   &:hover {
@@ -42,7 +42,7 @@
   &:hover {
     background-color: color-mod($shipsOfficer tint(10%));
   }
-  &.callToAction {
+  &.cta {
     @mixin cta-icon white;
   }
 }
@@ -53,7 +53,7 @@
   &:hover {
     background: color-mod($fallingStar tint(20%));
   }
-  &.callToAction {
+  &.cta {
     @mixin cta-icon gray;
   }
 }
