Fix color palette for stories.

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -17,7 +17,7 @@ $brightUbe: #D6A2E8;
 $magenta: #6D214F;
 $navyBlue: #182C61;
 $sasquatchSocks: #FC427B;
-$pineGlade: #FC427B;
+$pineGlade: #BDC581;
 $highligterLavender: #82589F;
 
 
