--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -10,7 +10,7 @@ $whitePepper: #F8EFBA;
 $keppel: #58B19F;
 $shipsOfficer: #2C3A47;
 $fireyFuschia: #B33771;
-$bluebell: #B33771;
+$bluebell: #3B3B98;
 $georgiaPeach: #FD7272;
 $oasisStream: #9AECDB;
 $brightUbe: #D6A2E8;
