Add Terminal component.

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -20,6 +20,9 @@ $sasquatchSocks: #FC427B;
 $pineGlade: #BDC581;
 $highligterLavender: #82589F;
 
+$lightGrey: #F7F7F7;
+$terminalRed: #FF795D;
+
 
 /* $blue: #32c7ff;
 $tbBlue: #0099cb;
