--- a/src/components/Code/Code.css
+++ b/src/components/Code/Code.css
@@ -1,8 +1,19 @@
 @import "../../styles/colors.css";
 @import "../../styles/layout.css";
 
+$defaultWidth: 500px;
+
 .code {
-  @mixin centerContent;
-  font-family: monospace;
-  background-color: $fallingStar;
+  display: inline-block;
+  padding: 5px 10px;
+  background-color: #f5f7f8;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  min-width: $defaultWidth;
+  box-sizing: border-box;
+  code {
+    width: 100%;
+    color: color-mod(black tint(40%));
+    font-family: 'Inconsolata', monospace;
+  }
 }
