--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -13,3 +13,19 @@
     margin-left: 10px;
   }
 }
+
+@define-mixin download-icon {
+  &::after {
+    content: "";
+    background-image: inline(icons/download-white.svg);
+    position: relative;
+    display: inline-block;
+    background-size: 1em;
+    background-repeat: no-repeat;
+    background-position: left center;
+    height: 1em;
+    width: .5em;
+    padding-left: .5em;
+    margin-left: 10px;
+  }
+}
