--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -19,6 +19,7 @@
   text-decoration: none;
   font-style: normal;
   border-radius: 2px;
+  align-self: flex-start;
   a {
     color: inherit;
     text-decoration: none;
