--- a/src/components/Code/Code.css
+++ b/src/components/Code/Code.css
@@ -1,9 +1,11 @@
+@import "../../styles/fonts.css";
 @import "../../styles/colors.css";
 @import "../../styles/layout.css";
 
-$defaultWidth: 500px;
+$defaultWidth: 400px;
 
 .code {
+  text-align: left;
   display: inline-block;
   padding: 5px 10px;
   background-color: #f5f7f8;
@@ -14,6 +16,6 @@ $defaultWidth: 500px;
   code {
     width: 100%;
     color: color-mod(black tint(40%));
-    font-family: 'Inconsolata', monospace;
+    font-family: $codeFont;
   }
 }
