--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,10 +1,11 @@
 @import "../../styles/colors.css";
-@import "../../styles/icons.css";
-@import "../../styles/layout.css";
+@import "../../styles/fonts.css";
+@import "../../styles/mixins/icons.css";
+@import "../../styles/mixins/layout.css";
 
 .btn {
   @mixin centerContent;
-  font-family: 'Nunito', sans-serif;
+  font-family: var(--font-primary);
   font-weight: 200;
   padding: 0.75em 1.25em;
   border: 1px solid transparent;
