--- a/src/components/Terminal/Terminal.css
+++ b/src/components/Terminal/Terminal.css
@@ -1,20 +1,18 @@
-@import "../../styles/layout.css";
 @import "../../styles/colors.css";
-
+@import "../../styles/fonts.css";
+@import "../../styles/mixins/layout.css";
 
 .terminal {
   @mixin centerContent;
+  @mixin borderBoxAll;
   --borderRadius: 6px;
   flex-direction: column;
   box-shadow:0 2px 6px 1px rgba(0, 0, 0, .25);
   border-radius: var(--borderRadius);
   position: relative;
   background-color: var(--color-fallingStar);
-  width: 400px;
-  height: 600px;
-  * {
-    box-sizing: border-box;
-  }
+  width: 600px;
+  height: 400px;
 }
 
 .header {
@@ -56,7 +54,7 @@
   margin-bottom: 8px;
   text-align: left;
   span {
-    font-family: 'Source Code Pro', monospace;
+    font-family: var(--font-code);
     &.comment {
       color: grey;
       &:before {
